# mcpelauncher

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
.github/ISSUE_TEMPLATE/: config.yml
.github/workflows/: branch_sync.yml
android-support-headers/: CMakeLists.txt
arg-parser/: CMakeLists.txt
base64/: CMakeLists.txt
base64/include/: base64.h
base64/src/: base64.cpp
cll-telemetry/: CMakeLists.txt
cll-telemetry/src/: file_event_batch.cpp
daemon-utils/client/: CMakeLists.txt
daemon-utils/server/: CMakeLists.txt
eglut/include/: eglut.h
eglut/src/: eglut.c  eglut_x11.c  eglutint.h
epoll-shim/: CMakeLists.txt
epoll-shim/src/: epoll.c
ext/: glfw.cmake  json.cmake  snmalloc.cmake
file-picker/: CMakeLists.txt
file-picker/include/: file_picker.h
file-picker/src/: file_picker_cocoa.h  file_picker_cocoa.mm  file_picker_zenity.cpp  file_picker_zenity.h
file-util/: CMakeLists.txt
game-window/: CMakeLists.txt
game-window/include/: game_window.h  key_mapping.h
game-window/src/: window_eglut.cpp  window_eglut.h  window_glfw.cpp  window_glfw.h  window_sdl3.h  (+3 more)
libjnivm/: CMakeLists.txt
logger/: CMakeLists.txt
mcpelauncher-apkinfo/: CMakeLists.txt
mcpelauncher-apkinfo/include/mcpelauncher/: apkinfo.h
mcpelauncher-apkinfo/src/: apkinfo.cpp
mcpelauncher-client/: CMakeLists.txt
mcpelauncher-common/: CMakeLists.txt
mcpelauncher-linker/: .gitmodules
mcpelauncher-mac-bin/: README.md
minecraft-imported-symbols/: CMakeLists.txt
msa-daemon-client/: CMakeLists.txt
osx-elf-header/: CMakeLists.txt
properties-parser/: CMakeLists.txt
(+73 files in other folders)
